0.12.5
======
 * Fixed the progressbar in the file view
 * It is possible to add the "New Data DVD Project" button to the welcome window again.

0.12.4
======
 * Fixed --cdimage and --dvdimage parameters.
 * Fixed the file browser menu. Now it contains the bookmarks and "add to project" actions again.
 * Fixed Index 0 (Pregap) handling in audio cue files.
 * Improved handling of broken cue files: K3b now searches the directory for image files that could fit
   the cue file in case the FILE entry is bogus.
 * Always try to create a new session in case the old one has been imported regardless of the inserted
   medium's free space.
 * Fixed DVD-RW Restricted Overwrite media handling
 * Use RAW writing mode for audio CDs in case the writer does not support DAO but RAW.
 * Fixed compile problems with latest ffmpeg builds.
	
0.12.3
======
 * Ignore dock config from K3b versions older than 0.12
 * Do not delete DVD project iso image if "remove image" is unchecked.
 * Properly load multisession default settings.
 * Update device selection boxes when devices are added or removed via HAL.
 * Properly cancel DVD project writing.
 * Fixed DVD+RW session import

0.12.2
======
 * After for example copying a CD when the dialog comes up again keep the last settings.
 * Default to incremental sequential writing mode when copying a DVD to a DVD-R.
 * Fixed a crash when the DVD copy dialog is reused.
 * Fixed inline editing in the audio CD view (without bigger changes this only works with a 
   rather strange selection mode.)
 * Show the configured splash screen image instead of the default.
 * Fixed eMovix 0.9 default settings handling.
 * Import session: disable RockRidge if the previous session does not contain RR extensions.
   This fixes the problem with strange filenames if the new session is mounted via RR.
 * Fixed the --cdimage parameter.
 * Changed max copies from 99 to 999.
 * Improved session import dialog.
 * Properly default to DVD size in Video DVD project.