@@ -363,7 +363,8 @@ void K3bDvdCopyDialog::slotToggleAll()
   if( m_checkOnlyCreateImage->isChecked() )
     m_checkDeleteImages->setChecked( false );
   
-  m_buttonStart->setEnabled( (k3bcore->deviceManager()->dvdReader().count() > 0) && (dev || m_checkOnlyCreateImage->isChecked()) );
+  m_buttonStart->setEnabled( m_comboSourceDevice->selectedDevice() && 
+			     (dev || m_checkOnlyCreateImage->isChecked()) );
 }
 
 
