@@ -61,7 +61,7 @@ void K3bDataViewItem::paintCell( QPainter* p, const QColorGroup& cg, int column,
   QColorGroup _cg = cg;
 
   if( !dataItem()->isRemoveable() && dataItem()->doc()->root() != dataItem() ) {
-    _cg.setColor( QColorGroup::Text, Qt::gray );
+    _cg.setColor( QColorGroup::Text, listView()->palette().disabled().foreground() );
   }
 
   if( column == 0 ) {
